--- a/AppReact/package.json
+++ b/AppReact/package.json
@@ -10,13 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.1.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.68.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.12.2",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
