--- a/AppReact/package.json
+++ b/AppReact/package.json
@@ -15,8 +15,12 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.68.0",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
+    "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
