--- a/AppReact/package.json
+++ b/AppReact/package.json
@@ -17,6 +17,8 @@
     "react-native": "0.68.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
