--- a/AppReact/package.json
+++ b/AppReact/package.json
@@ -12,17 +12,24 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "node-fetch": "^3.3.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.68.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
+    "react-native-url-polyfill": "^1.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.22.6",
+    "@babel/preset-react": "^7.22.5",
     "@babel/runtime": "^7.12.5",
+    "@jest/globals": "^29.6.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -31,12 +38,17 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^26.6.3",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "jest": "^28.0.0",
     "metro-react-native-babel-preset": "^0.67.0",
+    "msw": "^1.2.2",
     "prettier": "2.7.1",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
   }
 }
